# ros2-sim-sandbox

./: .gitignore  README.md
sandbox_description/: CMakeLists.txt  package.xml
sandbox_description/config/: ackermann_like_controller.yaml
sandbox_description/description/: colors.xacro  gps.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  ros2_control.xacro  vehicle.urdf.xacro  vehicle.xacro
sandbox_description/launch/: robot_view.launch.py
sandbox_description/rviz/: navigation.rviz  robot_view.rviz
sandbox_gazebo/: CMakeLists.txt  package.xml
sandbox_gazebo/launch/: launch_sim.launch.py  launch_sim_sensors.launch.py  launch_sim_with_lc.launch.py
sandbox_gazebo/src/: waypoint_visualizer.py
sandbox_gazebo/worlds/: empty.world  obstacle_test.world
sandbox_localization/: CMakeLists.txt  README.md  package.xml
sandbox_localization/config/: ekf_global.yaml  ekf_local.yaml
sandbox_localization/launch/: localization.launch.py
sandbox_navigation/: package.xml  setup.cfg  setup.py
sandbox_navigation/config/: waypoints.yaml
sandbox_navigation/launch/: navigation.launch.py
sandbox_navigation/sandbox_navigation/: navigation_utils.py  waypoint_follower.py
sandbox_perception/: package.xml  setup.cfg  setup.py
sandbox_perception/sandbox_perception/: lidar_node.py
